# americas-most-delayed

./: .gitignore  totem.toml
server/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  feeds_v2.csv
server/src/: agency.rs  api.rs  auth.rs  delay.rs  gtfs.rs  history.rs  macros.rs  main.rs  realtime.rs  scheduler.rs  wire.rs
server/src/catalogs/: catalog.rs  mobilitydata.rs  mod.rs  transitland.rs
static/: README.md  config.js  index.html  status.html
