[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["ws"] }
chrono = "0.4.45"
chrono-tz = "0.10"
csv = "1.4.0"
geohash = "0.13.2"
gtfs-rt = "0.5.0"
prost = "0.11.9"
reqwest = "0.13.4"
reverse_geocoder = "4.1.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
# Raw FFI (same sqlite rusqlite bundles) purely for `sqlite3_memory_used` — the only
# way to tell how much of our heap is SQLite's page/statement caches. See
# `gtfs::sqlite_memory`.
# FIXME: Remove libsqlite3-sys
libsqlite3-sys = { version = "0.38.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "time",
    "fs",
] }
zip = "8.6.0"
tower-http = { version = "0.7.0", features = [
    "compression-br",
    "compression-gzip",
    "cors",
] }
